src/styles/Main.sass
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel:wght@400..900&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Inter:wght@100..900&family=Libre+Caslon+Display&family=Markazi+Text:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Trirong:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
@import './Variables.sass'
@import './MarginsAndPadding.sass'
@import './Mixins.sass'
@font-face
  font-family: 'icomoon'
  src: url('systems/foundryvtt-final-fantasy/assets/fonts/icomoon.eot?3hrrg5')
  src: url('systems/foundryvtt-final-fantasy/assets/fonts/icomoon.eot?3hrrg5#iefix') format('embedded-opentype'), url('systems/foundryvtt-final-fantasy/assets/fonts/icomoon.ttf?3hrrg5') format('truetype'), url('systems/foundryvtt-final-fantasy/assets/fonts/icomoon.woff?3hrrg5') format('woff'), url('systems/foundryvtt-final-fantasy/assets/fonts/icomoon.svg?3hrrg5#icomoon') format('svg')
  font-weight: normal
  font-style: normal
  font-display: block

[class^="icon-"], [class*=" icon-"] 
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important
  speak: never
  font-style: normal
  font-weight: normal
  font-variant: normal
  text-transform: none
  line-height: 1

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale

.icon-critical:before
  content: "\e900"

.icon-dice-solid:before
  content: "\e901"

// global style changes to foundry UI
.top-layer
  z-index: 100
.window-resizable-handle
  z-index: 4
.journal-entry-page .editor-content, .journal-entry-pages 
    font-family: "Trirong", serif
    line-height: 1.5
    ul 
      li
        margin-left: 1em
        list-style-image: url('systems/foundryvtt-final-fantasy/assets/svg/critical.svg')
        &::marker
          font-size: 1.8em
          line-height: 0.1
    blockquote
      margin-top: 1.5em
      margin-bottom: 1.5em
    h4
      font-weight: bold
      margin-bottom: 0
    h4 + p
      margin-top: 0

// style changes specific to FF15 UI 
.FF15
  --tjs-select-appearance: none
  --tjs-select-background: #f9f9f9 url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23666" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"%3E%3Cpath d="M6 9l6 6 6-6"%3E%3C/path%3E%3C/svg%3E') no-repeat right 0.3rem center
  --tjs-select-background-size: 16px 16px
  --tjs-select-border: 1px solid #ccc
  --tjs-select-border-radius: 4px
  --tjs-select-box-shadow-focus: 0 0 5px rgba(0, 0, 0, 0.2)
  --tjs-select-box-shadow-focus-visible: 0 0 5px rgba(0, 0, 0, 0.5)
  --tjs-select-cursor: pointer
  --tjs-select-flex: 1
  --tjs-select-height: 24px /* Adjust height for smaller vertical size */
  --tjs-select-outline-focus-visible: none
  --tjs-select-outline-offset: 2px
  --tjs-select-overflow: hidden
  --tjs-select-padding: 0 5px /* Adjust padding for smaller size */
  --tjs-select-text-overflow: ellipsis
  --tjs-select-transition-focus-visible: box-shadow 0.2s ease
  --tjs-select-width: auto /* Adjust width as needed */
  /* Option variables */
  --tjs-select-option-background: #23221d
  --tjs-select-option-color: #b5b3a4

  --dnd5e-border-dotted: 1px dotted #bbb

  button
    width: fit-content
    &.disabled
      cursor: inherit
    &.stealth
      position: relative
      z-index: 100
      border: none
      background: none
      margin: auto
      &:hover
        box-shadow: none
      &:active
        box-shadow: none !important
      &:focus
        box-shadow: none !important
        
    &.wide
      width: 100%
    &.tall
      line-height: 1.5rem
    &.short
      line-height: 0.7rem


  .item-sheet
    .sheet-row
      margin: 0 0 0.3rem 0
      .right
        input:not([type="checkbox"])
          margin-right: 0.5rem

  .heightcol
    height: 100%
    

  .panel
    width: 100%
    position: relative
    overflow: hidden
    &:not(.borderless)
      border-top: 4px ridge var(--ff-border-color) !important
      border-bottom: 4px ridge var(--ff-border-color) !important
    &.overflow
      overflow: auto
  .overflow
    overflow: auto
  .box
    width: 100%
    position: relative
    overflow: hidden
    border: 4px ridge var(--ff-border-color)

  section.window-content
    border: 5px ridge var(--outer-border-color)
    // display: block

  .ml-30percent
    margin-left: 25%
  .mr-30percent
    margin-left: -50%
  .fullwidth
    width: 100%
  .font-inter
    font-family: "Inter", sans-serif
  .font-cinzel
    font-family: "Cinzel", serif
    display: inline
  
  .inline-block
    display: inline-block
  .widebold
    font-size: 2em
    font-weight: 400
  .wide
    width: 100%
  .high
    height: 100%
  .glow
    letter-spacing: -2px
    color: #fff
    font-weight: 400
    text-shadow: 0 0 4px #fff
    -webkit-text-stroke-width: 0.5px
    -webkit-text-stroke-color: rgba(100,0,0,0.1)

  .scaleup
    transform: scaleX(2.4)
  .scaleupint
    transform: scaleX(2.4) scaleY(1.15)

  .white
    color: #fff

  .black
    color: #000
  .gold
    color: var(--color-highlight)

  input[type="text"]
    all: unset
    width: 100%
    color: #fff
    background: #420000
    margin-top: -2px
  input[type="number"]
    all: unset
    color: #fff
    background: #420000
    &.wide
      width: 100%
    &.widebold
      font-size: 2em

  label
    &.underline
      border-bottom: 1px solid var(--color-underline-header)
      display: inline-block
    &.h1
      font-size: var(--size-xl-h)
    &.h2
      font-size: var(--size-lg-h)
    &.h3
      font-size: var(--size-md-h)
    &.h4
      font-size: var(--size-ms-h)

  select
    @include input
    max-width: 200px // Set a maximum width
    overflow: hidden // Prevent overflow
    text-overflow: ellipsis // Add ellipsis for overflowed text
    white-space: nowrap // Prevent text wrapping
    box-shadow: none
    &:disabled
      @include input-disabled

    &.short
      height: inherit
      
  //- Fonts
  h1
    font-family: "Cinzel", sans-serif
    font-weight: 400
    font-style: normal
    font-size: var(--size-xl-h)
  p
    font-family: "Trirong", serif
    font-optical-sizing: auto
    font-size: 1rem
    font-style: normal
    padding: 0

  h2
    font-size: var(--size-lg-h)
  h3
    font-size: var(--size-md-h)
  h2, h3, [title]
    color: var(--color-highlight)

  h4
    font-size: var(--size-sm-h)

  .border-right
    border-right: 4px ridge var(--color-highlight)

  .border-left
    border-left: 4px ridge var(--color-highlight)

  .border-top
    border-top: 4px ridge var(--color-highlight)

  .border-bottom
    border-bottom: 4px ridge var(--color-highlight)

  .border
    border: 4px ridge var(--color-highlight)

  .right-border-gradient-mask
    mask-image: linear-gradient(0deg, transparent 0%, black 100%)

  // alignment, accent and visibility
  .bold
    font-weight: 700

  .burgundy
    color: var(--outer-border-color)

  .left
    text-align: left

  .right
    text-align: right

  .center
    text-align: center

  .hide
    visibility: hidden

  .relative
    position: relative

  .tight
    padding: 0

  .pointer
    cursor: var(--tjs-select-cursor)

  .caption
    font-size: smaller

  .light
    opacity: 0.5


  .prose
    min-height: 300px
    background-color: rgba(255, 255, 255, 0.2)
    // border: 5px ridge var(--border-highlight)
    // border-radius: var(--border-radius)
    padding: 0.1em 0.2em
    font-family: "Newsreader", serif

  .editor.prosemirror.tjs-editor 
    &.small
      height: 20%
    .editor-enriched
      padding: 1em

  .window-title
    font-size: 1.5em
    font-weight: 700

  .envelope
    border: 4px ridge var(--ff-border-color)
    padding: 1rem
    

  .flex
    display: flex !important

  .flexrow>.flex4,
  .flexcol>.flex4
    flex: 4

  .underline
    border-bottom: 4px ridge var(--ff-border-color)

  .bgb
    background-color: blue

  .bgo
    background-color: darkorange

  .bgg
    background-color: green

  .flexrow
    &.nowrap
      flex-wrap: nowrap
    &.end
      justify-content: flex-end
    &.justify-vertical
      align-items: center

  .gap-4
    gap: 4px
  .gap-15
    gap: 15px

  .no-wrap
    white-space: nowrap

  .required
    font-size: large
    margin-right: 2px
    color: var(--color-positive)
    display: none
    &.active
      display: block
      color: var(--color-negative)
      animation: pulse 0.5s infinite

  // Colours
  .negative
    color: var(--color-negative)

  .positive
    color: var(--color-positive)

  ol.standard-list
    height: 100%
    margin: 0
    padding: 0.1rem
    border: 1px inset grey
    border-radius: var(--border-radius)

  .standard-list-row.header
    // padding: 0.4rem 0.3rem

  .standard-list-row
    position: relative // Allows the img to be positioned properly
    padding: 0 0.3rem
    margin: 0 2px 2px 2px
    align-items: center
    border-radius: var(--border-radius)
    display: flex
    flex-direction: row
    justify-content: flex-start
    background: rgba(0, 0, 0, 0.1)
    max-height: 2rem
  .li-image
    display: flex
    align-items: center
    flex-shrink: 0
    margin-left: -0.3rem
    max-height: 2rem
    flex: 0.7

  
  // Ensur
  table
    &.standard-list
      width: 100%
    &.borderless
      border: none

    th, td
      padding: 0
      line-height: 2rem
      // border: 1px solid gold
      &.img
        position: relative
        min-width: 32px
      img.icon
        margin-top: 3px
        position: absolute
        top: -4px
        left: 0
      &.fixed
        width: 10%
        white-space: nowrap
      &.shrink
        width: 8%
        white-space: nowrap
      &.min
        width: 2%
        white-space: nowrap
      &.buttons
        text-align: right
        &.lock-open
          width: 15%
        &.lock
      &.expand
        width: auto

    &.small-text
      font-size: smaller
      th, td
        padding-left: 0.4rem
        img.icon
          margin-top: 5px
        &.shrink
          width: 9%
        &.min
          width: 3%
      
  img.icon
    margin-top: -0.2rem
    max-height: 2rem
    border: 1px solid transparent
    border-top-left-radius: var(--border-radius)
    border-bottom-left-radius: var(--border-radius)
    border-top-right-radius: 0px
    border-bottom-right-radius: 0px
    cursor: pointer

  .chat
    .flexrow
      gap: 5px
      img.icon
        max-height: 2rem
        overflow: hidden
        cursor: pointer
        //- this combo preserves the border radius with an invisible border, so you still get the clipping effect
        border-radius: var(--border-radius) 0 0 var(--border-radius)
        border: none
        &.right
          border-radius: 0 var(--border-radius) var(--border-radius) 0
          border: none



.drag-over 
  border: 2px dashed #007bff

